fix Header misalignment on some pages

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,17 +1,16 @@
 
 header {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 
   margin-bottom: 4rem;
 }
 
 .compactHeader {
-  display: flex;
   justify-content: space-between;
+  flex-direction: row;
   align-items: flex-end;
-  flex-wrap: wrap;
 }
 
 .link {
